ci:adjust proxy api
